cmake_minimum_required(VERSION 3.27.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(CXX_API)

if (UNIX)
	add_definitions(-D__LINUX__)

	if (${CMAKE_SYSTEM_NAME} STREQUAL "Android")
		add_definitions(-D__ANDROID__)
	endif()
endif(UNIX)

add_library(${PROJECT_NAME} INTERFACE)

target_include_directories(
	${PROJECT_NAME} INTERFACE
	$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
	$<INSTALL_INTERFACE:api/cxx/include>
)

install(TARGETS ${PROJECT_NAME} DESTINATION . EXPORT ${WEB_FRAMEWORK_EXPORT_TARGETS})
install(DIRECTORY include DESTINATION api/cxx)
install(
	EXPORT ${WEB_FRAMEWORK_EXPORT_TARGETS}
	FILE ${WEB_FRAMEWORK_EXPORT_TARGETS_FILE}
	NAMESPACE ${WEB_FRAMEWORK_EXPORT_TARGETS_NAMESPACE}
	DESTINATION cmake
)
