[build-system]
requires = ["scikit-build-core[pyproject]"]
build-backend = "scikit_build_core.build"

[project]
name = "web_framework_api"
description = "Python API for WebFramework"
readme = "README.md"
license = { file = "license/LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "LazyPanda07", email = "semengricenko@gmail.com" }
]
maintainers = [
    { name = "LazyPanda07", email = "semengricenko@gmail.com" }
]
keywords = ["Web"]
version = "3.3.0"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[tool.scikit-build]
build.verbose = true
build.tool-args = ["-j0"]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release", "-G", "Ninja"]
sdist.include = [
  "cxx/include/*.hpp",
  "lib/*.so",
  "dll/*.dll",
]

[project.urls]
Repository = "http://github.com/LazyPanda07/WebFramework"
Wiki = "http://github.com/LazyPanda07/WebFramework/wiki"
