[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web_framework_api"
description = "Python API for WebFramework"
readme = "README.md"
authors = [
    { name = "LazyPanda07", email = "semengricenko@gmail.com" }
]
maintainers = [
    { name = "LazyPanda07", email = "semengricenko@gmail.com" }
]
keywords = ["Web"]
version = "1.0.7"
dependencies = [
    "multipledispatch",
    "requests",
    "tqdm"
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Repository = "http://github.com/LazyPanda07/WebFramework"
Wiki = "http://github.com/LazyPanda07/WebFramework/wiki"
