[build-system]
requires = ["scikit-build-core[pyproject]"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.py-api = "py3"

[project]
name = "web_framework_api"
description = "Python API for WebFramework"
readme = "README.md"
license = { file = "license/LICENSE" }
authors = [
    { name = "LazyPanda07", email = "semengricenko@gmail.com" }
]
maintainers = [
    { name = "LazyPanda07", email = "semengricenko@gmail.com" }
]
keywords = ["Web"]
version = "3.1.3"
dependencies = [
    "multipledispatch",
    "requests",
    "tqdm"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "http://github.com/LazyPanda07/WebFramework"
Wiki = "http://github.com/LazyPanda07/WebFramework/wiki"
